# diceparser

./: .flake8  .python-version  LICENSE  README.md  diceparser.py  pyproject.toml
src/diceparser/: __init__.py  dice.py  diceparser.py  parser.py
tests/: test_dice_methods.py  test_sanity.py
