[tool.poetry]
name = "diceparser"
version = "0.1.0"
description = "Yet another dice-parsing library!"
authors = ["Gage Talbot <gagetalbot@pm.me"]
readme = "README.md"
packages = [{include = "diceparser", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
