[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diceparser"
description = "Yet another diceparser!"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name = "Gage Talbot", email = "gagetalbot@pm.me" },
]
dependencies = []
dynamic = ["version"]

[tool.hatch.version]
path = "src/diceparser/__init__.py"

[tool.hatch.envs.testing]
dependencies = [
  "pytest",
]
[tool.hatch.envs.testing.scripts]
all = "pytest tests/"

[[tool.hatch.envs.testing.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.hatch.envs.linting]
detached = true
dependencies = [
  "flake8",
  "pylint",
  "mypy",
  "black",
  "isort",
]

[tool.hatch.envs.linting.scripts]
chk = [
  "- pylint src/",
  "- flake8 --max-complexity 10 --max-line-length 88 --extend-ignore E203 --exclude src/diceparser/__init__.py src/",
  "- mypy src/"
]
fmt = [
  "black src/",
  "isort src/",
  "chk",
]

[tool.isort]
profile = "black"
